= Release Notes
include::include.adoc[]


== 1.2-RC3 (tbd)

=== What's New In This release

== 1.2-RC2 (2018-09-04)

=== What's New In This release

* Add configurable `condition` to `@Retry` extension to allow for customizing when retries should be attempted (<<extensions.adoc#_retry,Docs>>)
* Fix `Retry.Mode.FEATURE` and `Retry.Mode.SETUP_FEATURE_CLEANUP` to make a test pass if a retry was successful.
* Improve `@Retry` to be declarable on a spec class which will apply it to all feature methods in that class and subclasses (<<extensions.adoc#_retry,Docs>>)
* Improve StepwiseExtension mark only subsequent features as skipped in case of failure (#893)
* Fix issue with `@SpringBean` mocks throwing `InvocationTargetException` instead of actual declared exceptions (#878, #887)
* Fix void methods with implicit targets failing in `with` and `verifyAll` (#886)

Thanks to all the contributors to this release: Marc Philipp, Tilman Ginzel, Marcin Zajączkowski, Martin Vseticka

== 1.2-RC1 (2018-08-14)

Breaking Changes: Spock 1.2 drops support for Java 6, Groovy 2.0 and Groovy 2.3

=== What's New In This release

* Add Groovy 2.5.0 Variant for better Java 10 Support
* Add @SpringBean and @SpringSpy inspired by @MockBean, Also add @StubBeans
* Add @UnwrapAopProxy to make automatically unwrap SpringAopProxie
* Add flag to UnrollNameProvider to assert unroll expressions (set the system property `spock.assertUnrollExpressions` to `true`) https://github.com/spockframework/spock/issues/767[#767]
* Add automatic module name descriptors for Java 9
* Add `@AutoAttach` extension (<<extensions.adoc#_autoattach,Docs>>)
* Add `@Retry` extension (<<extensions.adoc#_retry,Docs>>)
* Fix SpockAssertionErrors and its subclasses now are properly `Serializeable`
* Fix Spring injection of JUnit Rules, due to the changes in 1.1 the rules where initialized before Spring could inject them,
  this has been fixed by performing the injection earlier in the process